k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlas-events
  labels:
    app.kubernetes.io/part-of: atlas-events
