k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-ingress
  namespace: atlas-events
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - atlas-events.ma
      secretName: atlas-tls
  rules:
    - host: atlas-events.ma
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: atlas-api
                port:
                  number: 8080
          - path: /ical
            pathType: Prefix
            backend:
              service:
                name: atlas-api
                port:
                  number: 8080
          - path: /actuator/
            pathType: Prefix
            backend:
              service:
                name: atlas-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-web-service
                port:
                  number: 80
